--- a/Weeks/WK3/demo1.css
+++ b/Weeks/WK3/demo1.css
@@ -2,10 +2,14 @@
 
 body {
     display: grid;
-    grid-template-columns: 20% 60% 20%;
-    grid-template-rows: auto;
-    grid-template-areas: "header header header" "nav main aside" "nav main aside" "footer footer footer"; */
-    }
+	grid-template-columns: 20% 50% 20% 10%;
+	grid-template-rows: auto;
+	grid-template-areas: 
+		"header header header header"
+		" main main empty aside"
+        /* " nav main empty aside" */
+		"footer footer footer footer";
+      }
 
 header {
 background-color: blue;
@@ -37,6 +41,14 @@ grid-area: aside;
 text-align: center;
 padding-top: 100%;
 }
+.emptyStyle {
+    background-color: purple;
+    color: white;
+    font-size: 30px;
+    grid-area: empty;
+    text-align: center;
+    padding-top: 100%;
+    }
 footer {
 background-color: darkgreen;
 color: white;
